cmake_minimum_required(VERSION 2.8)
project(wano CXX)

# Clang and GCC Setup
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    set(CXX_14_FLAG "c++1y")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    set(CXX_14_FLAG "c++14")
endif()
if(CMAKE_CXX_COMPILER_ID MATCHES "(Clang)|(GNU)")
    include(CheckCXXCompilerFlag)
    CHECK_CXX_COMPILER_FLAG("-std=${CXX_14_FLAG}" COMPILER_SUPPORTS_CXX14)
    if(COMPILER_SUPPORTS_CXX14)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=${CXX_14_FLAG}")
    else()
        message(FATAL_ERROR "Your compiler (${CMAKE_CXX_COMPILER}) does not support C++14.")
    endif()
    
    add_compile_options("-Wfatal-errors")
endif()

# Get dependencies
if(WIN32)
    find_path(CURSES_INCLUDE pdcurses.lib HINTS lib)
    find_library(CURSES_LIBRARIES pdcurses HINTS lib)
    include_directories(${CURSES_INCLUDE})
else()
    find_package(Curses REQUIRED)
    find_library(PANEL_LIBRARY panel)
endif()
find_package(Boost REQUIRED COMPONENTS system filesystem)

add_subdirectory(curses_ui)
add_subdirectory(wano)
